--- a/views/create.ejs
+++ b/views/create.ejs
@@ -17,6 +17,12 @@
                     </div>
 
                     <div class="mb-3">
+                        <label class="form-label">Link Externo (S.O.U)</label>
+                        <input type="text" name="external_link" class="form-control" placeholder="https://...">
+                        <div class="form-text">Link para mais detalhes do processo.</div>
+                    </div>
+
+                    <div class="mb-3">
                         <label class="form-label">Módulo de IA</label>
                         <select name="moduleName" class="form-select">
                             <% modules.forEach(function(mod) { %>
